# SerialScope

./: Makefile  README.md  arduino.py  client.py  config.py  guihelper.py  layout.py  main.py  requirements.txt  setup.py  streamer_utils.py
Arduino/: requirements.txt
Arduino/scripts/: list_serial_ports.sh
Arduino/src/: SerialScopeArduino.ino
ArduinoScope/: __main__.py  arduino.py  arduinoscope.py  config.py  gui.py  guihelper.py  layout.py  scope.py  window.py
SerialScope/: PySimpleGUI.py  __main__.py  arduino.py  config.py  gui.py  helper.py  layout.py  scope.py  version.py
SerialScopeArduino/: Makefile  SerialScopeArduino.ino
SerialScopeCPP/: CMakeLists.txt  main.cpp
SerialScopeCPP/Serial/: CMakeLists.txt
SerialScopeCPP/gui/: CMakeLists.txt  SerialScopeGui.cpp  SerialScopeGui.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialscopewindow.cpp  serialscopewindow.h
SerialScopeCPP/serial/: CMakeLists.txt
SignalGenerator/: Makefile
SignalGenerator/makefiles/: Arduino.mk
SignalGenerator/src/: config.h.in  main.ino
SoftScope/: SoftOscilloscope.py  serial_oscilloscope.py
arduino/: Makefile
arduino/src/: main.ino
